Bug 158336 - "**Expression is Faulty**" after copying/pasting formula in another table
Summary: "**Expression is Faulty**" after copying/pasting formula in another table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.3.2 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.4
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-23 14:36 UTC by Xisco Faulí
Modified: 2023-11-30 09:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-11-23 14:36:19 UTC
Steps to reproduce:
1. Open attachment 189410 [details] from bug 157132
2. Copy <C2> and <C3> cells
3. Paste them in the empty cells

-> In table 2 and 3, the third column changes to "**Expression is Faulty**"

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 72928fa459f8e67c30a2e2357424ab75d3105a26
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-11-23 14:37:01 UTC
Regression introduced by:

author	Xisco Fauli <xiscofauli@libreoffice.org>	2023-10-25 18:07:18 +0200
committer	Xisco Fauli <xiscofauli@libreoffice.org>	2023-10-26 08:48:23 +0200
commit 0c008ab081aa5bbf53f8562e95e547deae5afc2e (patch)
tree 158e4e6b4f41cb2725c736bc2ac073c3061b3829
parent d6527f127622f23ac529ce667fac5ff69ea33ea4 (diff)
tdf#157132: restore behaviour for TBL_RELBOXNAME
Comment 2 Commit Notification 2023-11-23 17:22:10 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/32ce5fe4ed19a79b6f15a5d4d1892e6cc8d778d9

tdf#158336: Only Change current table

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-11-30 09:23:21 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/43f9c335f4bb2455db2431ad7b88b2754b67ec72

tdf#158336: Only Change current table

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.