sw/source/core/table/swtable.cxx
@@ -1728,7 +1728,7 @@ void SwTable::UpdateFields(TableFormulaUpdateFlags eFlags)
             if(eFlags == TBL_BOXPTR)
                 pBoxFormula->TryBoxNmToPtr();
             else if(eFlags == TBL_RELBOXNAME)
-                pBoxFormula->ToRelBoxNm(this);
+                pBoxFormula->TryRelBoxNm();
             else
                 pBoxFormula->ChangeState();
         }
